--- a/ArgentinaPrograma/PracticasModulo8/testing/src/main/resources/application.properties
+++ b/ArgentinaPrograma/PracticasModulo8/testing/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/testSpring?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/testSpring4?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=superperro
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
