--- a/ArgentinaPrograma/PracticasModulo8/testing/src/main/resources/application.properties
+++ b/ArgentinaPrograma/PracticasModulo8/testing/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/testSpring4?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=superperro
+spring.datasource.url=jdbc:mysql://bk4lnoirvugbzuzh25do-mysql.services.clever-cloud.com:3306/bk4lnoirvugbzuzh25do?useSSL=false&serverTimezone=UTC
+spring.datasource.username=uiza3lctb4nvh8zy
+spring.datasource.password=m2ezWKsGB5fGn3bC6gkQ
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
